Next section structured.

--- a/index.css
+++ b/index.css
@@ -233,3 +233,14 @@ li {
 .last_card {
   margin-right: 0;
 }
+
+.grid {
+  width: 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  grid-template-rows: repeat(2, 200px);
+}
+
+.gallery_photo {
+  width: 50px;
+}
