--- a/index.css
+++ b/index.css
@@ -207,8 +207,7 @@ li {
 .menu_card {
   height: 250px;
   width: 250px;
-  margin-top: 35px;
-  margin-right: 20px;
+  margin: 35px 10px 0;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   box-shadow: 5px 10px 18px #bcbcbc;
@@ -230,17 +229,20 @@ li {
   padding-left: 10px;
 }
 
-.last_card {
-  margin-right: 0;
-}
-
 .grid {
-  width: 100px;
+  height: 700px;
+  margin-top: 10px;
   display: grid;
-  grid-template-columns: repeat(3, 300px);
-  grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(2, auto);
+  row-gap: 0px;
 }
 
-.gallery_photo {
-  width: 50px;
+.gallery_container {
+  margin-bottom: 0;
+}
+
+.gallery_img {
+  width: 100%;
+  height: 100%;
 }
