--- a/index.css
+++ b/index.css
@@ -350,7 +350,65 @@ li {
   padding-left: 40px;
 }
 
-@media (max-width: 550px) {
+.btn__menu {
+  background-color: transparent;
+  font-size: 40px;
+  text-align: center;
+  border: none;
+  color: #7342d6;
+  display: none;
+}
+
+.menu__backdrop {
+  position: absolute;
+  background-color: #242424;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+  visibility: visible;
+  opacity: 1;
+}
+
+.menu--open {
+  max-height: 100vh;
+  overflow-y: hidden;
+}
+
+.menu__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu__list {
+  padding: 32px 0;
+}
+
+.menu__link {
+  font-size: 40px;
+  color: white;
+}
+
+.btn__menu--close {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  padding: 8px;
+  color: white;
+}
+
+@media (max-width: 480px) {
   .section_1 {
     height: 800px;
     justify-content: space-between;
@@ -385,5 +443,33 @@ li {
 
   .chili {
     top: 700px;
+  }
+
+  .nav_links {
+    display: none;
+  }
+
+  .btn__menu {
+    display: block;
+  }
+
+  .contact_container {
+    height: 370px;
+    margin-top: 40px;
+    padding-top: 40px;
+  }
+
+  .contact_info {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact_card {
+    height: 120px;
+    width: 300px;
+    margin: 30px 10px 0;
+    padding-top: 20px;
+    border-radius: 100px;
+    box-shadow: 5px 10px 18px #bcbcbc;
   }
 }
