--- a/index.css
+++ b/index.css
@@ -361,6 +361,7 @@ li {
 .menu__backdrop {
   position: absolute;
   background-color: #ffffff;
+  height: 30vh;
   top: 70px;
   left: 0;
   right: 0;
@@ -380,8 +381,7 @@ li {
 }
 
 .menu--open {
-  max-height: 100vh;
-  overflow-y: hidden;
+  height: 100vh;
 }
 
 .menu__links {
@@ -395,13 +395,14 @@ li {
 }
 
 .menu__link {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .btn__menu--close {
   position: absolute;
-  right: 20px;
-  top: 0px;
+  background-color: #ffffff;
+  right: 12px;
+  top: -65px;
   padding: 8px;
   color: white;
 }
@@ -413,7 +414,7 @@ li {
   }
 
   .section1_description {
-    top: 100px;
+    top: 150px;
     left: 15px;
   }
 
@@ -422,7 +423,7 @@ li {
   }
 
   .s1_title {
-    font-size: 40px;
+    font-size: 37px;
     margin-bottom: 20px;
   }
 
