--- a/index.css
+++ b/index.css
@@ -170,8 +170,6 @@ li {
 
 .section_2 {
   height: 700px;
-  /* display: flex; */
-  /* justify-content: space-between; */
   z-index: 0;
 }
 
@@ -193,12 +191,16 @@ li {
   top: 100px;
 }
 
+.section2_left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .section2_right_container {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  right: 400px;
+  right: 300px;
+  top: 100px;
 }
 
 .section_link {
@@ -408,6 +410,14 @@ li {
 }
 
 @media (max-width: 480px) {
+  .nav_links {
+    display: none;
+  }
+
+  .btn__menu {
+    display: block;
+  }
+
   .section_1 {
     height: 800px;
     justify-content: space-between;
@@ -444,12 +454,36 @@ li {
     top: 700px;
   }
 
-  .nav_links {
-    display: none;
+  .section_2 {
+    height: 500px;
   }
 
-  .btn__menu {
-    display: block;
+  .section_2_circle {
+    height: 300px;
+    width: 300px;
+    border-radius: 300px;
+    left: 350px;
+    bottom: -200px;
+    z-index: -1;
+  }
+
+  .section2_left {
+    height: 100%;
+  }
+
+  .section2_left_img {
+    height: 200px;
+    left: 300px;
+    top: 180px;
+  }
+
+  .section2_right_container {
+    top: 0px;
+  }
+
+  .section2_right_row {
+    width: 200px;
+    right: 0;
   }
 
   .contact_container {
@@ -470,24 +504,5 @@ li {
     padding-top: 20px;
     border-radius: 100px;
     box-shadow: 5px 10px 18px #bcbcbc;
-  }
-
-  .section_2_circle {
-    height: 400px;
-    width: 400px;
-    border-radius: 500px;
-    left: 350px;
-    z-index: -1;
-  }
-
-  .section2_left_img {
-    height: 300px;
-    left: 350px;
-    top: 100px;
-  }
-
-  .section2_right_container {
-    left: 0px;
-    top: 0px;
   }
 }
