--- a/index.css
+++ b/index.css
@@ -354,6 +354,8 @@ li {
   padding-left: 40px;
 }
 
+/* Mobile view button */
+
 .btn__menu {
   background-color: transparent;
   font-size: 40px;
@@ -536,5 +538,13 @@ li {
     width: auto;
     margin-left: 10px;
     margin-right: 10px;
+  }
+
+  .footer_container {
+    height: auto;
+  }
+
+  .footer_row {
+    display: inline;
   }
 }
